--- a/BddShop/BddShop.csproj
+++ b/BddShop/BddShop.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Bolt.Common.Extensions" Version="2.1.0" />
     <PackageReference Include="Bolt.IocScanner" Version="1.2.0" />
+    <PackageReference Include="Bolt.RequestBus" Version="2.0.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.1" />
   </ItemGroup>
 
