--- a/BddShop/BddShop.csproj
+++ b/BddShop/BddShop.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Bolt.Common.Extensions" Version="2.1.0" />
     <PackageReference Include="Bolt.IocScanner" Version="1.2.0" />
     <PackageReference Include="Bolt.RequestBus" Version="2.0.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.1" />
   </ItemGroup>
 
