--- a/BddShop/BddShop.csproj
+++ b/BddShop/BddShop.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Enquiry\" />
+  </ItemGroup>
+
 </Project>
