some cleanup and more extensions on service scope

--- a/BddShop.Tests/BddShop.Tests.csproj
+++ b/BddShop.Tests/BddShop.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\BddShop\BddShop.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Enquiry\" />
+  </ItemGroup>
+
 </Project>
