--- a/BddShop.Tests/BddShop.Tests.csproj
+++ b/BddShop.Tests/BddShop.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Enquiry\**" />
+    <EmbeddedResource Remove="Features\Enquiry\**" />
+    <None Remove="Features\Enquiry\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="Xbehave" Version="2.4.1" />
@@ -18,10 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BddShop\BddShop.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Enquiry\" />
   </ItemGroup>
 
 </Project>
